<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CcsCalcu</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">BSIT</string>
    <string name="calcu">Calculator</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="clear">c</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="binary">Binary</string>
    <string name="octal">Octal</string>
    <string name="decimal">Decimal</string>
    <string name="hexa">Hexa</string>
    <string name="go">Go</string>
    <string name="div">/</string>
    <string name="multi">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="title_activity_calculators">Calculators</string>

</resources>